# valid-framework

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
audit/: audit_analysis.py  coding_guide.md
data/: README.md
docker/: Dockerfile  docker-compose.yml
experiments/: config.py  mc_expansion.py  reproduce_all.py
figures/: generate_all.py
notebooks/: crypto_backtesting_starter_kit.ipynb
paper/: PAPER_VALID_v2.0.md
paper/investor_charts/: gen_all_charts.py
paper/kdd-mlf/: main.tex  references.bib
paper/kdd-mlf/figures/: gen_is_oos_scatter.py  gen_sr_histogram.py
paper/latex/: main.tex  references.bib
results/reference/: ablation_study.csv  all_482_variants.csv  audit_summary_80.csv  batch6_transformer.csv  cost_sensitivity.csv  literature_audit_80.csv  mc_fpr_btc_daily_200.csv  mc_fpr_eth_1h_200.csv  mc_fpr_sol_1h_200.csv  monte_carlo_fpr_200.csv  multi_asset_extended.csv  traditional_baselines.csv
tests/: test_checklist.py  test_cpcv.py  test_labeling.py  test_metrics.py
valid/: __init__.py  checklist.py  costs.py  cpcv.py  features.py  labeling.py  metrics.py  report.py
